@startuml
interface IEntityFactory {
    CreateAnimal(initialHealthPercent:double, initialEnergyPercent:double, position:Position, isMale:bool) : T
    CreatePlant(initialHealthPercent:double, initialEnergyPercent:double, position:Position) : T
    CreateMeat(position:Position) : Meat
}
class EntityFactory {
    + EntityFactory(serviceProvider:IServiceProvider, worldService:IWorldService, timeManager:ITimeManager, entityLocator:IEntityLocator<Animal>, plantLocator:IEntityLocator<Plant>)
    + CreateAnimal(initialHealthPercent:double, initialEnergyPercent:double, position:Position, isMale:bool) : T
    + CreatePlant(initialHealthPercent:double, initialEnergyPercent:double, position:Position) : T
    + CreateMeat(position:Position) : Meat
}
class "IEntityLocator`1"<T> {
}
IEntityFactory <|-- EntityFactory
EntityFactory --> "_serviceProvider" IServiceProvider
EntityFactory --> "_worldService" IWorldService
EntityFactory --> "_timeManager" ITimeManager
EntityFactory --> "_entityLocator<Animal>" "IEntityLocator`1"
EntityFactory --> "_plantLocator<Plant>" "IEntityLocator`1"
@enduml
